test/conformance/chainsaw/validating-policies/policy-exception-action-override/pod-exception.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-pod-from-exception-without-labels
  namespace: development-namespace
spec:
  containers:
    - name: nginx
      image: nginx:latest
