test/conformance/chainsaw/validating-policies/policy-exception-action-override/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: policy-exception-action-override
spec:
  concurrent: false
  steps:
    - name: create-namespaces
      try:
        - apply:
            file: development-namespace.yaml

    - name: create policy
      use:
        template: ../../_step-templates/create-policy.yaml
        with:
          bindings:
            - name: file
              value: policy.yaml

    - name: wait-validating-policy-ready
      use:
        template: ../../_step-templates/validating-policy-v1-ready.yaml
        with:
          bindings:
            - name: name
              value: require-env-label

    - name: create-policy-exception
      try:
        - apply:
            file: exception.yaml

    - name: pod-allowed-in-dev-namespace-via-override
      try:
        - apply:
            file: pod-exception.yaml
        - assert:
            resource:
              apiVersion: v1
              kind: Pod
              metadata:
                name: allowed-pod-from-exception-without-labels
                namespace: development-namespace
        - sleep:
            duration: 30s
        - assert:
            resource:
              apiVersion: wgpolicyk8s.io/v1alpha2
              kind: PolicyReport
              metadata:
                namespace: development-namespace
                labels:
                  app.kubernetes.io/managed-by: kyverno
                ownerReferences:
                  - apiVersion: v1
                    kind: Pod
                    name: allowed-pod-from-exception-without-labels
              results:
                - policy: require-env-label
                  properties:
                    exceptions: dev-audit-override
                  result: fail
                  scored: true
                  source: KyvernoValidatingPolicy

    - name: pod-denied-in-default-namespace-without-policy-exception
      try:
        - create:
            file: pod-denied.yaml
            expect:
              - check:
                  ($error != null): true
                  (contains($error, 'environment')): true

    - name: pod-with-valid-labels-allowed
      try:
        - apply:
            file: allowed-pod.yaml
        - assert:
            resource:
              apiVersion: v1
              kind: Pod
              metadata:
                name: allowed-pod-with-env
                labels:
                  environment: dev
